--- a/opendut-carl/opendut-carl-api/Cargo.toml
+++ b/opendut-carl/opendut-carl-api/Cargo.toml
@@ -27,7 +27,7 @@ wasm-client = [
     "dep:leptos",
     "dep:leptos_oidc",
     "dep:tonic-web-wasm-client",
-    "dep:tracing",
+    #"dep:tracing",
 ]
 
 [dependencies]
@@ -42,6 +42,7 @@ leptos = { workspace = true, optional = true }
 leptos_oidc =  { workspace = true, optional = true }
 log = { workspace = true }
 oauth2 = { workspace = true, default-features = false, optional = true }
+opentelemetry = { workspace = true }
 prost = { workspace = true }
 reqwest = { workspace = true, default-features = false, features = ["rustls-tls-native-roots"] }
 serde = { workspace = true, features = ["std", "derive"] }
@@ -50,9 +51,11 @@ tokio = { workspace = true, optional = true }
 tonic = { workspace = true }
 tonic-web-wasm-client = { workspace = true, optional = true }
 tower = { workspace = true, optional = true }
-tracing = { workspace = true, optional = true }
+tracing = { workspace = true }
+tracing-opentelemetry = { workspace = true }
 url = { workspace = true }
 uuid = { workspace = true, features = ["v4", "serde"] }
+opentelemetry_sdk = { workspace = true }
 
 [build-dependencies]
 protobuf-src = { workspace = true }
