--- a/.ci/docker/telemetry/otel-collector.yml
+++ b/.ci/docker/telemetry/otel-collector.yml
@@ -5,6 +5,18 @@ receivers:
        endpoint: 0.0.0.0:4318
      grpc:
        endpoint: 0.0.0.0:4317
+ filelog:
+   include: [ /etc/simple.log ]
+   operators:
+     - type: regex_parser
+       regex: '^(?P<time>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}) (?P<sev>[A-Z]*) (?P<msg>.*)$'
+       timestamp:
+         parse_from: attributes.time
+         layout: '%Y-%m-%d %H:%M:%S'
+       severity:
+         parse_from: attributes.sev
+
+
 processors:
   batch:
 
@@ -63,6 +75,6 @@ service:
      processors: [batch]
      exporters: [debug, prometheus]
    logs:
-     receivers: [otlp]
+     receivers: [otlp, filelog]
      processors: [batch, resource, attributes]
      exporters: [debug, loki]
