--- a/.github/workflows/job-bundle-edgar.yaml
+++ b/.github/workflows/job-bundle-edgar.yaml
@@ -25,6 +25,8 @@ jobs:
         uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b #4.1.5
       - name: Rust setup
         uses: ./.github/actions/rust-setup
+        with:
+          cargo-cross: true
 
       - name: Download opendut-edgar
         uses: actions/download-artifact@6b208ae046db98c579e8a3aa621ab581ff575935
@@ -33,6 +35,8 @@ jobs:
           path: "./target/ci/distribution/${{ matrix.package.target }}/${{ matrix.package.name }}/"
       - name: Download Netbird Client
         run: cargo ci opendut-edgar distribution-netbird-client --target=${{ matrix.package.target }}
+      - name: Download rperf
+        run: cargo ci opendut-edgar distribution-rperf --target=${{ matrix.package.target }}
       - name: Download licenses
         uses: actions/download-artifact@6b208ae046db98c579e8a3aa621ab581ff575935
         with:
