--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,6 +96,7 @@ opentelemetry_sdk = "0.22.0"
 opentelemetry-semantic-conventions = "0.14.0"
 pem = {version = "3.0.3", features = ["serde"]}
 phf = { version = "0.11", features = ["macros"] }
+ping-rs = { version = "0.1.2" }
 predicates = "3.0.4"
 prost = "0.12.1"
 prost-build = "0.12.1"
@@ -147,6 +148,7 @@ netbird.version = "0.23.9-8de14ad"
 netbird-signal.version="0.25.0"       # docker container version for netbirdio/signal: NETBIRD_SIGNAL_VERSION
 netbird-management.version="0.25.0"   # docker container version for netbirdio/management:  NETBIRD_MANAGEMENT_VERSION
 netbird-dashboard.version="v1.17.12"  # docker container version for wiretrustee/dashboard: NETBIRD_DASHBOARD_VERSION
+rperf.version = "0.1.8"
 
 [workspace.metadata.ci.xtask] #CLI tool crates used in CI (not libraries)
 cargo-bundle-licenses.version = "1.3.0"
