--- a/opendut-edgar/Cargo.toml
+++ b/opendut-edgar/Cargo.toml
@@ -14,6 +14,7 @@ opendut-types = { workspace = true }
 opendut-util = { workspace = true }
 
 anyhow = { workspace = true }
+backoff = { workspace = true, features = ["tokio"] }
 cfg-if = { workspace = true }
 chrono = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
@@ -28,8 +29,10 @@ indoc = { workspace = true }
 netlink-packet-route = { workspace = true }
 netlink-packet-utils = { workspace = true }
 nix = { workspace = true, features = ["user", "fs"] }
-opentelemetry = { workspace = true }
+pem = { workspace = true }
+opentelemetry = { workspace = true, features = ["otel_unstable"] }
 opentelemetry_sdk = { workspace = true }
+ping-rs = { workspace = true }
 regex = { workspace = true }
 reqwest = { workspace = true }
 rtnetlink = { workspace = true }
